Bug 125105 - CSV export , cannot edit field delimiter combobox (GTK3)
Summary: CSV export , cannot edit field delimiter combobox (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-05-03 14:27 UTC by raal
Modified: 2019-05-06 12:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
how it should work (16.56 KB, image/png)
2019-05-03 14:28 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2019-05-03 14:27:15 UTC
Description:
error in command line: ../../../../gtk/gtkwidget.c:8584: widget not within a GtkWindow


Steps to Reproduce:
open file 
save as - CSV
in Export text file dialog try edit Field delimiter combobox

Actual Results:
cannot edit and write my own delimiter

Expected Results:
edit combobox


Reproducible: Always


User Profile Reset: No



Additional Info:
works in gen, but not in gtk3
Comment 1 raal 2019-05-03 14:28:05 UTC
Hello Caolán, probably some "weld" commit?
Comment 2 raal 2019-05-03 14:28:39 UTC
Created attachment 151157 [details]
how it should work
Comment 3 Commit Notification 2019-05-03 19:32:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/fdab8ee608297bb618ae911f46b525d06eb4cac1%5E%21

Resolves: tdf#125105 missing can-focus

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-05-06 12:21:03 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: ddea172792d13516ff7e0dd43f1f78b74ade8914
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!