Resolves: tdf#125105 missing can-focus

Change-Id: I201b658cd0c643fbcaf2ec1411b2a2991eca36dd